This is the ChangeLog of the clone project

Created by Dr. Rolf Jansen on 2013-02-19.
Copyright (c) 2013. All rights reserved.

Note: Milestones are embraced by ••••


2013-02-23 13:18  rj - r39

   * clone.c, utils.h:
     - streamlined stage passing between reader() and writer()

2013-02-22 11:10  rj - r38

   * clone.c:
     - qitems are kept initialized in the dispenser, so, no need to initialize them again in dispenseNewQItem()
     - removed unecessary helper variables and constructs from writer()
     - in writer() clean-up everything at one central stage below the cleanfinish label
     - release src and dst paths in reverse order as they were allocated, i.e. free() dst first
     - set version to 1.0.2b


•••• 2013-02-20 -- Created a snapshot of r37 for release as v1.0.1, provided it for download at GC, and submitted it to FreeBSD ports ••••


2013-02-20 23:29  rj - r37

   * ChangeLog:
     - release of version 1.0.1 (r37)

2013-02-20 21:55  rj - r36

   * clone.c:
     - when reading, do not assume anything about the file size
     - when the field d_type of struct dirent is DT_UNDEFINED, then call lstat() to obtain the type
     - rename fileCopy() to fileCopyScheduler()
     - dispense virgin qitems, set stage to nascent in the fileCopyScheduler()

2013-02-20 11:00  rj - r35

   * clone.c:
     - if the file size changed in-between scheduling and copying, then most probably
       other file attributes changed too, so lstat() the source again.
     - set version to 1.0.1

2013-02-20 01:08  rj - r34

   * clone.c:
     - on reading and writing, check only for real errors,
       e.g., an actual file size difference counts not as error.

2013-02-19 12:35  rj - r33

   * ChangeLog:
     - entry r32: corrected timestamp 06:18 to 12:18
     - entry r28: rights and obligations has been transferred from Cyclaero Ltda. to Dr. Rolf Jansen.

2013-02-19 12:18  rj - r32

   * ChangeLog, clone.c:
     - added ChangeLog
     - set version to 1.0.1b
